fix: fix badge move when hover and display scrollbar in group nav

--- a/client/web/src/styles/antd/overwrite.less
+++ b/client/web/src/styles/antd/overwrite.less
@@ -66,6 +66,7 @@
 
 .ant-badge {
   display: block;
+  width: fit-content;
 
   .ant-badge-count.ant-badge-count-sm.ant-badge-multiple-words {
     padding: 0 4px;
